--- a/section 2/cafe/src/App.css
+++ b/section 2/cafe/src/App.css
@@ -1,7 +1,12 @@
 .App {
-  text-align: center;
+  max-width: 90%;
+  margin: 30px auto;
 }
 
+.order-row {
+  background: #eee;
+  border-bottom: 1px solid #ccc;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
